--- a/prepros-6.config
+++ b/prepros-6.config
@@ -5,7 +5,8 @@
   "fileConfigs": [],
   "fileTree": {
     "expandedDirs": [
-      "styles"
+      "styles",
+      "styles/components"
     ],
     "hideSystemFiles": true,
     "systemFiles": [
