--- a/prepros-6.config
+++ b/prepros-6.config
@@ -26,7 +26,8 @@
       "imports": [
         "styles/components/_header.scss",
         "styles/components/_form.scss",
-        "styles/components/_result.scss"
+        "styles/components/_result.scss",
+        "styles/components/_radiostyle.scss"
       ]
     }
   ],
