--- a/prepros-6.config
+++ b/prepros-6.config
@@ -32,7 +32,7 @@
     }
   ],
   "projectView": {
-    "selectedView": "file-tree"
+    "selectedView": "log"
   },
   "fileWatcher": {
     "enabled": true,
@@ -181,7 +181,6 @@
       "hoist_vars": false,
       "if_return": true,
       "join_vars": true,
-      "cascade": true,
       "collapse_vars": true,
       "reduce_vars": true,
       "warnings": true,
@@ -200,7 +199,6 @@
     "output": {
       "ascii_only": false,
       "beautify": false,
-      "bracketize": false,
       "comments": "",
       "indent_level": 4,
       "indent_start": 0,
